<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="5dp"
    android:background="@drawable/wifi_dialog_background">

    <TextView
        android:id="@+id/connect_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/defaultTextColor"
        android:text="@string/open_wifi"/>

    <View
        android:layout_width="match_parent"
        android:background="@color/defaultTextColor"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/defaultTextColor"
        android:text="@string/detect_wifi"/>


    <TextView
        android:id="@+id/content_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/defaultTextColor"
        android:text="@string/connect_now"/>

    <View
        android:layout_width="match_parent"
        android:background="@color/defaultTextColor"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/defaultTextColor"
            android:text="@string/yes"/>

        <View
            android:layout_width="1dp"
            android:background="@color/defaultTextColor"
            android:layout_height="match_parent"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/no"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/defaultTextColor"
            android:text="@string/no"/>

    </LinearLayout>



</LinearLayout>