<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey800"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/advance_search"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_title_size" />
    <com.eardatek.player.dtvplayer.widget.CustomEditText
        android:id="@+id/freq_edit"
        style="@style/customEditText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/freq"
        android:textSize="@dimen/edittext_hint_text_size"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/grey800"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_cancel" />

        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey800"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_search_text_size" />

    </LinearLayout>

</LinearLayout>