<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
             android:fitsSystemWindows="true"
    android:background="@color/grey400">

    <com.eardatek.special.player.widget.CustomToolbar
        android:id="@+id/toolbar_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/bg_toolbar"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/scaning"
        app:navigationIcon="@drawable/back">

    </com.eardatek.special.player.widget.CustomToolbar>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.eardatek.special.player.widget.ProgressWheel
            android:id="@+id/scan_progreswheel"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:barColor="@color/earda_background"
            app:barWidth="8dp"
            app:rimColor="@color/grey600"
            app:rimWidth="8dp"
            app:contourColor="@color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/found_channels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@color/earda_background"
                android:textSize="45sp"/>

            <TextView
                android:id="@+id/found_channels_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/channels"
                android:textColor="@color/earda_background"
                android:textSize="25sp"/>

        </LinearLayout>


        <View
            android:layout_width="200dp"
            android:layout_height="4dp"
            android:background="@color/earda_background"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/scan_freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/earda_background"
            android:textSize="30sp"
            android:text="@string/_0mhz"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center_horizontal|bottom"/>

    </FrameLayout>


</FrameLayout>