<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_bar"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="#aa000001"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginLeft="2dp"
            android:background="@drawable/selector_program_list_item"
            android:src="@drawable/gplus_back"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <ImageView
            android:id="@+id/tv_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/signal_3"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:background="@drawable/bettrry"
            android:textSize="14sp"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_cur_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#eeeeee" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/playing"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end|center_vertical">

        <TextView
            android:id="@+id/aspect_ratio"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/selector_ratio_background"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/ratio"
            android:textSize="16sp"
            android:textColor="#eeeeee" />

        <TextView
            android:id="@+id/textSWorHW"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="5dp"
            android:text="@string/hardware1"
            android:tag="@string/softwaredecode"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@drawable/selector_ratio_background"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


</FrameLayout>