<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_bar"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:visibility="visible" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/playing"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textSWorHW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_centerVertical="true"
        android:text="@string/hardwaradecode"
        android:tag="@string/softwaredecode"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="16sp"
        android:background="@drawable/selector_ratio_background"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="2dp"
        android:background="@drawable/selector_program_list_item"
        android:src="@drawable/gplus_back" />

    <ImageView
        android:id="@+id/tv_signal_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/go_back"
        android:src="@drawable/tv_signal_strength_5" />

    <TextView
        android:id="@+id/tv_battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_toRightOf="@+id/tv_signal_strength"
        android:background="@drawable/battery"
        android:text="100% "
        android:textSize="16sp"
        android:textColor="#cccccc" />

    <TextView
        android:id="@+id/tv_cur_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tv_battery_level"
        android:text="@string/time"
        android:textSize="16sp"
        android:textColor="#eeeeee" />

    <TextView
        android:id="@+id/aspect_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textSWorHW"
        android:background="@drawable/selector_ratio_background"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/ratio"
        android:textSize="16sp"
        android:textColor="#eeeeee" />

</RelativeLayout>