<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/earda_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/company"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:layout_marginTop="60dp"
        android:src="@drawable/eardatek_white"
        />

    <com.eardatek.player.dtvplayer.widget.ProgressWheel
        android:id="@+id/progres"
        android:layout_width="@dimen/progresswheel_width_dimens"
        android:layout_height="@dimen/progress_height_dimens"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        ProgressWheel:barColor="@color/grey500"
        ProgressWheel:barsLength="30dp"
        ProgressWheel:barWidth="8dp"
        ProgressWheel:rimColor="@color/cadetblue"
        ProgressWheel:rimWidth="8dp"
        ProgressWheel:contourColor="@color/transparent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_above="@id/progres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/welcome"/>

    <TextView
        android:id="@+id/enjoy"
        android:layout_below="@id/progres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/enjoy"/>

    <Button
        android:id="@+id/next"
        android:layout_below="@id/enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/next"/>

</RelativeLayout>